--- a/package.json
+++ b/package.json
@@ -1,45 +1,41 @@
 {
-  "name": "DevKit",
-  "version": "0.1.0",
+  "name": "devkit",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "diff": "^8.0.2",
-    "framer-motion": "^12.18.1",
-    "luxon": "^3.6.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.2",
-    "react-scripts": "5.0.1",
-    "surge": "^0.24.6",
-    "web-vitals": "^2.1.4"
+    "@tailwindcss/vite": "^4.1.12",
+    "@tanstack/query-sync-storage-persister": "^5.85.5",
+    "@tanstack/react-query": "^5.85.5",
+    "@tanstack/react-query-persist-client": "^5.85.5",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
+    "diff-match-patch": "^1.0.5",
+    "lucide-react": "^0.542.0",
+    "monaco-editor": "^0.54.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-json-view-lite": "^2.5.0",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^7.9.5",
+    "tailwindcss": "^4.1.12"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@eslint/js": "^9.33.0",
+    "@types/react": "^19.1.10",
+    "@types/react-dom": "^19.1.7",
+    "@vitejs/plugin-react": "^5.0.0",
+    "eslint": "^9.33.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.3.0",
+    "vite": "^7.1.2"
   }
 }
