--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,13 +1,15 @@
 {
   "name": "DevKit - Developer Tools",
   "short_name": "DevKit",
-  "description": "A collection of powerful developer tools — all in one place. Includes JSON Editor, Markdown Editor, Mermaid Diagram Editor, Code Diff Viewer, JavaScript IDE, and more.",
+  "description": "A modern, all-in-one developer toolkit built with React and Vite. DevKit provides essential development tools in a single, unified interface with a beautiful, themeable UI. Includes JSON Editor, Markdown Editor, Mermaid Diagram Editor, Code Diff Viewer, JavaScript IDE, GitHub Trending, and more.",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#ff6b6b",
   "orientation": "any",
   "scope": "/",
+  "dir": "ltr",
+  "lang": "en",
   "icons": [
     {
       "src": "/DevKit.svg",
@@ -72,6 +74,13 @@
       "description": "Manage your development tasks",
       "url": "/tasks",
       "icons": [{ "src": "/DevKit.svg", "sizes": "192x192" }]
+    },
+    {
+      "name": "GitHub Trending",
+      "short_name": "Trending",
+      "description": "Explore trending repositories on GitHub",
+      "url": "/github-trending",
+      "icons": [{ "src": "/DevKit.svg", "sizes": "192x192" }]
     }
   ],
   "share_target": {
@@ -85,4 +94,3 @@
     }
   }
 }
-
