--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "bun run build && cd ./dist && surge"
   },
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
