--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,13 +18,13 @@
       "purpose": "any maskable"
     },
     {
-      "src": "/DevKit.png",
+      "src": "/DevKit.svg",
       "sizes": "192x192",
       "type": "image/svg+xml",
       "purpose": "any"
     },
     {
-      "src": "/DevKit.png",
+      "src": "/DevKit.svg",
       "sizes": "512x512",
       "type": "image/svg+xml",
       "purpose": "any"
