--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "diff-match-patch": "^1.0.5",
     "lucide-react": "^0.542.0",
     "mermaid": "^11.12.1",
-    "monaco-editor": "^0.54.0",
+    "monaco-editor": "^0.55.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-json-view-lite": "^2.5.0",
@@ -59,6 +59,7 @@
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
+    "@bithero/monaco-editor-vite-plugin": "^1.0.3",
     "@eslint/js": "^9.33.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
