--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-dom": "^19.1.1",
     "react-json-view-lite": "^2.5.0",
     "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.9.5",
     "tailwindcss": "^4.1.12"
