--- a/package.json
+++ b/package.json
@@ -52,15 +52,16 @@
     "date-fns-tz": "^3.2.0",
     "diff-match-patch": "^1.0.5",
     "lucide-react": "^0.542.0",
+    "lz-string": "^1.5.0",
     "mermaid": "^11.12.1",
     "react": "^19.1.1",
     "react-codemirror-merge": "^4.25.4",
     "react-dom": "^19.1.1",
     "react-json-view-lite": "^2.5.0",
     "react-markdown": "^10.1.0",
-    "remark-gfm": "^4.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.9.5",
+    "remark-gfm": "^4.0.0",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
