--- a/package.json
+++ b/package.json
@@ -48,9 +48,6 @@
     "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-query-persist-client": "^5.85.5",
     "@uiw/react-codemirror": "^4.25.4",
-    "date-fns": "^4.1.0",
-    "date-fns-tz": "^3.2.0",
-    "diff-match-patch": "^1.0.5",
     "lucide-react": "^0.542.0",
     "lz-string": "^1.5.0",
     "mermaid": "^11.12.1",
@@ -59,9 +56,9 @@
     "react-dom": "^19.1.1",
     "react-json-view-lite": "^2.5.0",
     "react-markdown": "^10.1.0",
-    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.9.5",
     "remark-gfm": "^4.0.0",
+    "rehype-raw": "^7.0.0",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
